--- a/theme.scss
+++ b/theme.scss
@@ -158,7 +158,7 @@ $web-font-path: "https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0
   .nav-link.active,
   .nav-link.active:focus,
   .nav-link.active:hover{
-    color: white;
+    color: green;
   }
 }
 
